--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Simple Calculator</h1>
       <div class="calc-container">
         <div>
-          <input type="text" name="" id="" />
+          <input placeholder="0" type="text" name="" id="result" readonly />
         </div>
         <div class="btn-container">
           <button type="button" class="btn">&#40;</button>
