--- a/index.html
+++ b/index.html
@@ -15,28 +15,29 @@
           <input placeholder="0" type="text" name="" id="result" readonly />
         </div>
         <div class="btn-container">
-          <button type="button" class="btn">&#40;</button>
-          <button type="button" class="btn">&#41;</button>
-          <button type="button" class="btn">&#10229;</button>
-          <button type="button" class="btn">&#247;</button>
-          <button type="button" class="btn">7</button>
-          <button type="button" class="btn">8</button>
-          <button type="button" class="btn">9</button>
-          <button type="button" class="btn">&#215;</button>
-          <button type="button" class="btn">4</button>
-          <button type="button" class="btn">5</button>
-          <button type="button" class="btn">6</button>
-          <button type="button" class="btn">&#8722;</button>
-          <button type="button" class="btn">1</button>
-          <button type="button" class="btn">2</button>
-          <button type="button" class="btn">3</button>
-          <button type="button" class="btn">&#43;</button>
-          <button type="button" class="btn">0</button>
-          <button type="button" class="btn">&#46;</button>
-          <button type="button" class="btn">exp</button>
-          <button type="button" class="btn">&#61;</button>
+          <button type="button" class="btn" onclick="displayData('(')">&#40;</button>
+          <button type="button" class="btn" onclick="displayData(')')">&#41;</button>
+          <button type="button" class="btn" onclick="removeData()">&#10229;</button>
+          <button type="button" class="btn" onclick="displayData('/')">&#247;</button>
+          <button type="button" class="btn" onclick="displayData('7')">7</button>
+          <button type="button" class="btn" onclick="displayData('8')">8</button>
+          <button type="button" class="btn" onclick="displayData('9')">9</button>
+          <button type="button" class="btn" onclick="displayData('*')">&#215;</button>
+          <button type="button" class="btn" onclick="displayData('4')">4</button>
+          <button type="button" class="btn" onclick="displayData('5')">5</button>
+          <button type="button" class="btn" onclick="displayData('6')">6</button>
+          <button type="button" class="btn" onclick="displayData('-')">&#8722;</button>
+          <button type="button" class="btn" onclick="displayData('1')">1</button>
+          <button type="button" class="btn" onclick="displayData('2')">2</button>
+          <button type="button" class="btn" onclick="displayData('3')">3</button>
+          <button type="button" class="btn" onclick="displayData('+')">&#43;</button>
+          <button type="button" class="btn" onclick="displayData('0')">0</button>
+          <button type="button" class="btn" onclick="displayData('.')">&#46;</button>
+          <button type="button" class="btn" onclick="calculatorClear()">AC</button>
+          <button type="button" class="btn" onclick="calculateResult()">&#61;</button>
         </div>
       </div>
     </main>
   </body>
+  <script src="./main.js"></script>
 </html>
